[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/settings/settings_menu.gd" id="1_menu"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1

[node name="SettingsPanel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/SettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBox"]
layout_mode = 2
text = "Player Name"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
alignment = 1
max_length = 20
placeholder_text = "Enter your name"
caret_blink = true

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer/SettingsPanel/MarginContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
